# DreamServer

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-cli.yml  release-desktop.yml  validate-env.yml
desktop/: index.html  package.json  tailwind.config.js  tsconfig.json
desktop/src/: App.tsx  CompanionShell.tsx  index.css  main.tsx  proxy.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: .gitignore
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: commands.rs  installer.rs  main.rs
desktop/src/companion/: ChatInput.tsx  ChatMessageList.tsx  config.ts  (+8 more)
dream-server/: .env.example  .env.schema.json  .gitignore  CHANGELOG.md  FAQ.md  README.md  docker-compose.amd.yml  docker-compose.apple.yml  docker-compose.arc.yml  docker-compose.base.yml  docker-compose.external-llm.yml  docker-compose.intel.yml  docker-compose.nvidia.yml  docker-compose.vllm.yml  dream-backup.sh  dream-cli  dream-update.sh  get-dream-server.sh  manifest.json
dream-server/cli-installer/: package.json  tsconfig.json
dream-server/config/: model_catalog.json
dream-server/examples/: sample-doc.txt
dream-server/installers/: macos.sh
dream-server/lib/: service-registry.sh
dream-server/scripts/: build-capability-profile.sh  detect-hardware.sh  dream-test-functional.sh  dream-test.sh  health-check.sh  llm-cold-storage.sh  pre-download.sh  resolve-compose-stack.sh  session-cleanup.sh
dream-server/tests/: integration-test.sh  test-tier-map.sh
scripts/: get-dream-installer.sh
(+149 files in other folders)
