[package]
name = "dreamserver-desktop"
version = "0.1.0"
edition = "2021"
description = "DreamServer — Your Local AI Companion"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
which = "7"
sys-info = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
tauri-plugin-store = "2.4.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
